--- a/proyecto.ipynb
+++ b/proyecto.ipynb
@@ -289,16 +289,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tdwgaAQ45SjZ",
-        "outputId": "f153915a-9d5b-46b1-f54f-02fc301a75be"
+        "outputId": "a22ad9e1-81f3-483c-8eaf-2c16a1d58fd5"
       },
       "id": "tdwgaAQ45SjZ",
-      "execution_count": 1,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ]
@@ -314,7 +314,7 @@
         "from statsmodels.tsa.seasonal import seasonal_decompose\n",
         "\n",
         "# Ruta del archivo\n",
-        "file_path = r\"avocado.csv\"  # Usa r\"\" para tratarlo como raw string\n",
+        "file_path = r\"drive/MyDrive/ColabNotebooks/avocado.csv\"  # Usa r\"\" para tratarlo como raw string\n",
         "\n",
         "# Cargar el archivo CSV\n",
         "data = pd.read_csv(file_path)\n",
@@ -329,10 +329,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rzdJdh45d3dp",
-        "outputId": "c63507e0-2a83-4d24-f203-5b47e343bf42"
+        "outputId": "32bd6e47-3e8d-41c2-e4dd-ae4e2291c799"
       },
       "id": "rzdJdh45d3dp",
-      "execution_count": 2,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -398,10 +398,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x3DMDdRBfulg",
-        "outputId": "cc5cbf98-5cac-4256-b692-7a283bb2c334"
+        "outputId": "01b3fe40-ac6a-41b8-bbd4-c4d2d9ae0801"
       },
       "id": "x3DMDdRBfulg",
-      "execution_count": 3,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -440,10 +440,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d7z6Ah9YfzHX",
-        "outputId": "97de9eb7-f354-4b87-a5b6-9e168514e882"
+        "outputId": "eaca534b-4fb9-4c3c-ed49-f15c63116857"
       },
       "id": "d7z6Ah9YfzHX",
-      "execution_count": 4,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -479,7 +479,7 @@
         "outputId": "82eb55b8-2622-4796-d51f-5f77d571050a"
       },
       "id": "hOeHs0LLf1sX",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -510,7 +510,7 @@
         "outputId": "5df56ffe-6ad1-4922-d23e-478bf99dc7fe"
       },
       "id": "o9-byQFKf3xO",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -545,7 +545,7 @@
         "outputId": "ccc3a5d0-4509-499b-fd88-0ac598e4049b"
       },
       "id": "UYIVgTYUf7-n",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -584,7 +584,7 @@
         "outputId": "c21e4e8c-684a-4615-d101-3407b7266ecc"
       },
       "id": "5y3BTMNqf_Zv",
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -630,7 +630,7 @@
         "outputId": "d5545e84-5e98-464d-a89a-7fc45ebf95e4"
       },
       "id": "kEuvjUJshe6-",
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -668,7 +668,7 @@
         "outputId": "de7d240d-7940-43f9-fb7e-0d97b8dfe4be"
       },
       "id": "98FHxtVPhjLW",
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -714,7 +714,7 @@
         "outputId": "470bec27-dd77-424d-a67a-f29433d5a584"
       },
       "id": "5JWnTqu5hngG",
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -752,7 +752,7 @@
         "outputId": "f1896603-632c-4c83-841d-697ec001aa80"
       },
       "id": "SEkgZuGKho62",
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -806,7 +806,7 @@
         "outputId": "810ba146-4759-439e-8b86-8788b287a71b"
       },
       "id": "MqhVHDz-hrUe",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -859,7 +859,7 @@
         "outputId": "fbbb42ec-f500-4f65-bf41-c8504c180ce9"
       },
       "id": "DDXXOdkx6BkJ",
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -909,7 +909,7 @@
         "outputId": "6fa6810c-ce0e-4177-bdfa-7b0805994fc6"
       },
       "id": "yEazbngP6H9o",
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -955,7 +955,7 @@
         "outputId": "75bd180e-3e74-4cbe-b2c8-63c06cdae558"
       },
       "id": "wGtMwtRf6PUX",
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -998,7 +998,7 @@
         "outputId": "c9df0217-bd02-4307-c7ff-c8234ffe5c44"
       },
       "id": "x-Xz2C0q6R9o",
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1050,7 +1050,7 @@
         "outputId": "13cefaa2-36da-448a-f1af-6a7ba64a3611"
       },
       "id": "Ts4yL7AS6YYx",
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1104,7 +1104,7 @@
         "outputId": "5d3de4e2-2f2d-4007-f8e3-ccd9cc264a48"
       },
       "id": "JD0h25Z87S8Q",
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1158,7 +1158,7 @@
         "outputId": "3ef78ead-c318-4a7b-bbc2-0cdf3077a75c"
       },
       "id": "Ugjv1SzN7XCP",
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1209,7 +1209,7 @@
         "outputId": "0834e6e1-e80b-4524-fafc-33f7b710f3df"
       },
       "id": "lq6e-JQL7dRG",
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1252,7 +1252,7 @@
         "outputId": "53ed9a38-eeb1-46dc-d2f6-f0fb16dcef60"
       },
       "id": "Da3rPb117lfn",
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1304,7 +1304,7 @@
         "outputId": "074cf5bb-3412-4f94-eadb-18b75158fcff"
       },
       "id": "6f8qAuG97wZW",
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1358,16 +1358,16 @@
           "height": 762
         },
         "id": "KjlHhdIp8CPn",
-        "outputId": "278d8f05-b790-48d0-fcdb-60a15458056f"
+        "outputId": "f55ee34d-68d9-46f9-b267-13582a656c07"
       },
       "id": "KjlHhdIp8CPn",
-      "execution_count": 24,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-24-948597a7767e>:2: FutureWarning: 'Q' is deprecated and will be removed in a future version, please use 'QE' instead.\n",
+            "<ipython-input-21-948597a7767e>:2: FutureWarning: 'Q' is deprecated and will be removed in a future version, please use 'QE' instead.\n",
             "  region_data = data.groupby(['region', pd.Grouper(key='Date', freq='Q')]).agg({\n"
           ]
         },
@@ -1415,7 +1415,7 @@
         "outputId": "9cebd9af-0a4b-4248-e750-d505b9973f5f"
       },
       "id": "2WALu8jr8GQW",
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1472,7 +1472,7 @@
         "outputId": "2dc2bf81-b5a1-4586-c973-fce5a83e672a"
       },
       "id": "uMcqrlZH8LAG",
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1529,7 +1529,7 @@
         "outputId": "9a6927cb-2b8d-479e-b9b5-f4c095ce1ee7"
       },
       "id": "rXNhVxcl8SBn",
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1573,7 +1573,7 @@
         "outputId": "8b71fbf3-977c-45c7-d235-2411a439ded3"
       },
       "id": "SPWXVD3J8equ",
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1615,7 +1615,7 @@
         "outputId": "5c5a5850-0e6b-45de-fb5f-2cbc8055f096"
       },
       "id": "laszf1nZ8tgG",
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1666,7 +1666,7 @@
         "outputId": "9fd46e02-1861-484c-a43a-0c458c071004"
       },
       "id": "aGbg1Pfl8zG4",
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1715,10 +1715,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gpMwfG3u9COu",
-        "outputId": "faadda9c-8c48-4b53-d8f8-d4ea2813ea90"
+        "outputId": "53eac2a3-5b5c-498f-96fa-818a630fe517"
       },
       "id": "gpMwfG3u9COu",
-      "execution_count": 37,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -1733,7 +1733,8 @@
     {
       "cell_type": "code",
       "source": [
-        "#5.4\n",
+        "#5.5\n",
+        "\n",
         "\n"
       ],
       "metadata": {
@@ -1745,7 +1746,7 @@
         "outputId": "45a6bf87-8b54-49c9-95a6-7fcf3ead3e78"
       },
       "id": "l2n_MQlf-MD-",
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
