--- a/proyecto.ipynb
+++ b/proyecto.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "source": [
+        "modelo de regresión sobre le precio medio y ver si esta sobreajustado.\n"
+      ],
+      "metadata": {
+        "id": "tyb_EEDlFlZC"
+      },
+      "id": "tyb_EEDlFlZC"
+    },
+    {
+      "cell_type": "markdown",
       "id": "f8f63eb2-6e4c-47f2-996a-9ebfbe752166",
       "metadata": {
         "id": "f8f63eb2-6e4c-47f2-996a-9ebfbe752166"
@@ -1570,10 +1580,10 @@
           "height": 701
         },
         "id": "SPWXVD3J8equ",
-        "outputId": "8b71fbf3-977c-45c7-d235-2411a439ded3"
+        "outputId": "8800f663-4cd4-4522-efa2-19415aa86e0c"
       },
       "id": "SPWXVD3J8equ",
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "display_data",
